# NAO-robot-motion-planning-2018

./: .gitignore  README.md  TODO.md  urls.md
kinematics/: inverse_kinematics.py  load-urdf.py  naoqi_kinematics.py
nao/: HOWTO
nao/doc-release-1.14-public/: contents.html  cpp-classindex.html  cpp-funcindex.html  genindex.html  glossary.html  index.html  naoqi-eventindex.html  naoqi-memoryindex.html  objects.inv  search.html  searchindex.js
nao/doc-release-1.14-public/_downloads/: CMakeLists1.txt  CMakeLists11.txt  CMakeLists13.txt  CMakeLists15.txt  CMakeLists18.txt  alfacetracker_start.py  alinfrared_receiveanip.py  alinfrared_receiveremotekey.py  alinfrared_sendtonao.py  allaser_setdetectinglength.py  allaser_setopeningangle.py  alleds_fade.cpp  alleds_fade.py  alleds_on.cpp  alleds_on.py  almath_robot_guide.py  almath_transform.py  almotion_advancedcreaterotation.py  almotion_angleinterpolation.cpp  almotion_angleinterpolation.py  almotion_angleinterpolationreactif.py  almotion_angleinterpolationwithspeed.cpp  almotion_angleinterpolationwithspeed.py  almotion_areresourcesavailable.cpp  almotion_areresourcesavailable.py  almotion_changeangles.cpp  almotion_changeangles.py  almotion_changeposition.cpp  almotion_changeposition.py  almotion_changetransform.cpp  almotion_changetransform.py  almotion_closehand.cpp  almotion_closehand.py  almotion_controllingjoints.py  almotion_getangles.cpp  almotion_getangles.py  almotion_getbodynames.cpp  almotion_getbodynames.py  almotion_getcom.cpp  almotion_getcom.py  (+158 more)
nao/doc-release-1.14-public/dev/: example-index.html  index.html  sdk.html
nao/doc-release-1.14-public/dev/cpp/: examples.html  index.html  install_guide.html  tips-and-tricks.html  tutorials.html
nao/doc-release-1.14-public/dev/dotnet/: index.html
nao/doc-release-1.14-public/dev/java/: changelog.html  compiling_examples.html  compiling_from_source.html  index.html  install_guide.html  troubleshooting.html
nao/doc-release-1.14-public/dev/matlab/: index.html
nao/doc-release-1.14-public/dev/naoqi/: index.html
nao/doc-release-1.14-public/doxytags/: libalaudio.tag  libalcommon.tag  libalerror.tag  libalextractor.tag  libalmath.tag  libalmemoryfastaccess.tag  libalvalue.tag  libalvision.tag  libqi.tag  simulator-sdk.tag
nao/doc-release-1.14-public/examples/audio/soundbasedreaction/: CMakeLists.txt  onloudnoise.rst  qiproject.xml  soundbasedreaction.rst
nao/doc-release-1.14-public/examples/audio/speechbasedreaction/: CMakeLists.txt  alspeechbasedreaction.h  main.cpp  qiproject.xml  speechbasedreaction.rst
nao/doc-release-1.14-public/examples/audiovideocapture/: CMakeLists.txt  audiovideocapture.rst  avcaptureremote.h  main.cpp  qiproject.xml
nao/doc-release-1.14-public/examples/audiovideocapture/tests/: AVCaptureRemoteTest.py
nao/doc-release-1.14-public/examples/core/events/: CMakeLists.txt  events.h  events.rst  main.cpp  qiproject.xml
nao/doc-release-1.14-public/examples/core/helloworld/: CMakeLists.txt  example.rst  helloworld.h  index.rst  qiproject.xml  testhelloworld.cpp
nao/doc-release-1.14-public/examples/core/module/myfirstlocalmodule/: CMakeLists.txt  main.cpp  qiproject.xml
nao/doc-release-1.14-public/examples/core/module/myfirstproject/: CMakeLists.txt  main.cpp  qiproject.xml
nao/doc-release-1.14-public/examples/core/module/myfirstremotemodule/: CMakeLists.txt  main.cpp  qiproject.xml
nao/doc-release-1.14-public/examples/motion/motionexample/: CMakeLists.txt  almotionexample.cpp  almotionexample.h  main.cpp  qiproject.xml
nao/doc-release-1.14-public/examples/motion/motionexample/tests/: ALMotionExampleTest.py
nao/doc-release-1.14-public/examples/sensors/bumper/: CMakeLists.txt  example.rst  index.rst  main.cpp  principle.rst  qiproject.xml
nao/doc-release-1.14-public/examples/sensors/fastgetsetdcm/: CMakeLists.txt  fastgetsetdcm.cpp  fastgetsetdcm.h  fastgetsetexample.rst  qiproject.xml
nao/doc-release-1.14-public/examples/vision/genericvideomodule/: CMakeLists.txt  genericvideomodule.cpp  genericvideomodule.h  genericvideomodule.rst  gvm_useGenericVideoModule.py  main.cpp  qiproject.xml
nao/doc-release-1.14-public/examples/vision/onfacedetection/: CMakeLists.txt  onfacedetection.cpp  onfacedetection.rst  qiproject.xml
nao/doc-release-1.14-public/family/: body_type.html  index.html
nao/doc-release-1.14-public/getting_started/: helloworld_choregraphe.html  helloworld_choregraphe_script.html  helloworld_python.html  helloworlds.html  index.html  software_in_and_out.html
nao/doc-release-1.14-public/legal/: notice.html
nao/doc-release-1.14-public/nao/: battery-charging.html  chest_button_usages.html  configuring.html  connectivity.html  contacting_support.html  index.html  led_messages.html  nao-connecting.html  nao-turn-on.html  nao-webpage.html  out_of_the_box.html  practices.html  remote-control.html  removing-head.html  replacing-battery.html  taking-care.html  upgrade.html
nao/doc-release-1.14-public/naoqi/: index.html  stdtypes.html
nao/doc-release-1.14-public/news/: changelog.html  index.html
nao/doc-release-1.14-public/qibuild/: changelog.html  cmake-functions-index.html  genindex.html  getting_started.html  index.html  objects.inv  other_build_frameworks.html  py-modindex.html  qibuild_in_five_minutes.html  relnotes.html  search.html  searchindex.js
nao/doc-release-1.14-public/ref/: cpp-api.html  index.html  python-api.html  simulator_sdk.html
nao/doc-release-1.14-public/software/: index.html  installing.html  requirements.html
nao/qibuild-1.14.3/python/: setup.py
slides/: nao.aux  nao.nav  nao.out  nao.tex  nao.toc
src/: Paint-py.py  Paint_modified.py  SANDBOX.py  Untitled.ipynb  UpDim.py  UpDimTest.py  calibration.py  config.pickle  config_init.pickle  control.py  converter.pickle  converter_mini.pickle  converter_mini2.pickle  interpolation.py  interpolation_py2.py  interpolation_py2_Test.py  main.py  moves.py  naoqi_kinematics.py  path.pickle  premiers_essais.ipynb  time.pickle
src/control/: control_angles.py
src/kinematics/: NAOH25V33.urdf  inverse_kinematics.py
src/naoqi/: test.py
(+1386 files in other folders)
